src/objects/XAP_ASYNC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Async_Job_Id__c</fullName>
        <description>This should be a Master-Detail relationship to Async Job, but that&apos;s not supported.</description>
        <label>Async Job Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XAP_REST_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REST Request</label>
        <referenceTo>XAP_REST_Request__c</referenceTo>
        <relationshipLabel>Async Requests</relationshipLabel>
        <relationshipName>REST_Request_Async_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SObject_Id__c</fullName>
        <label>SObject Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Async Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>XAP_REST_Request__c</columns>
        <columns>Async_Job_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SObject_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRQAJ-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>REST Request Async Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>